cleanup, some Evo work

--- a/Evo/EvolutionCore/EvolutionCore.vcxproj
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj
@@ -185,14 +185,11 @@
     <ClInclude Include="EvolutionCoreWrappers.h" />
     <ClInclude Include="EvoPixelCoords.h" />
     <ClInclude Include="EvoStatistics.h" />
-    <ClInclude Include="gene.h" />
     <ClInclude Include="geneTypeLimits.h" />
     <ClInclude Include="genome.h" />
-    <ClInclude Include="gpList.h" />
     <ClInclude Include="gplIterator.h" />
     <ClInclude Include="gridBrush.h" />
     <ClInclude Include="GridDimensions.h" />
-    <ClInclude Include="gridField.h" />
     <ClInclude Include="gridNeighbor.h" />
     <ClInclude Include="gridPoint.h" />
     <ClInclude Include="gridPoint24.h" />
@@ -229,15 +226,17 @@
     <ClCompile Include="gridBrush.cpp" />
     <ClCompile Include="GridCoord.ixx" />
     <ClCompile Include="GridDimensions.cpp" />
+    <ClCompile Include="GridField.ixx" />
     <ClCompile Include="GridModel.ixx" />
     <ClCompile Include="GridPOI.cpp" />
     <ClCompile Include="GridPOI.ixx" />
     <ClCompile Include="GridPoint.ixx" />
+    <ClCompile Include="GridPointList.ixx" />
     <ClCompile Include="GridRect.ixx" />
     <ClCompile Include="gridSelection.cpp" />
     <ClCompile Include="MortalityTable.cpp" />
     <ClCompile Include="Genome.cpp" />
-    <ClCompile Include="gpList.cpp" />
+    <ClCompile Include="GridPointList.cpp" />
     <ClCompile Include="gridNeighbor.cpp" />
     <ClCompile Include="gridRect.cpp" />
     <ClCompile Include="grid_model.cpp" />
