--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -222,5 +222,8 @@
     <ClCompile Include="SlowMotionControl.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="DialogItem.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
