--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_APPL_WINDOW -1898 1091 1584 1014
-MoveWindow IDM_MAIN_WINDOW -1890 1143 1569 933
-MoveWindow IDM_MINI_WINDOW -448 1188 437 437
-MoveWindow IDM_MONITOR_WINDOW -1856 1472 438 416
+MoveWindow IDM_APPL_WINDOW -1898 1091 1592 1022
+MoveWindow IDM_MAIN_WINDOW -1890 1143 1577 941
+MoveWindow IDM_MINI_WINDOW -448 1188 445 445
+MoveWindow IDM_MONITOR_WINDOW -1856 1472 446 424
 MoveWindow IDM_CRSR_WINDOW -330 1890 302 227
 MoveWindow IDM_PARAM_WINDOW -979 1245 282 598
-MoveWindow IDM_PERF_WINDOW -352 1635 302 282
-MoveWindow IDM_DESC_WINDOW -1828 1367 437 437
-MoveWindow IDM_SIG_DESIGNER -654 1129 637 745
+MoveWindow IDM_PERF_WINDOW -633 1503 302 352
+MoveWindow IDM_DESC_WINDOW -1828 1367 445 445
+MoveWindow IDM_SIG_DESIGNER -654 1129 645 753
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_PERF_WINDOW SW_HIDE
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
