--- a/Evo/Evolution/Evolution.vcxproj.filters
+++ b/Evo/Evolution/Evolution.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="Version.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="win32_evoController.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -60,6 +57,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="win32_speedControl.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Version.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
