--- a/Evo/History/History.vcxproj.filters
+++ b/Evo/History/History.vcxproj.filters
@@ -21,12 +21,6 @@
     <ClInclude Include="targetver.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="HistorySystemImpl.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="HistModelData.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HistoryCache.cpp">
@@ -72,6 +66,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="HistorySystem.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="HistModelData.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
