--- a/Evo/Evolution/Evolution.vcxproj
+++ b/Evo/Evolution/Evolution.vcxproj
@@ -261,7 +261,6 @@
   <ItemGroup>
     <ClInclude Include="GenerationDisplay.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Version.h" />
     <ClInclude Include="win32_evoAppMenu.h" />
     <ClInclude Include="win32_evoAppWindow.h" />
     <ClInclude Include="win32_evoController.h" />
@@ -270,6 +269,7 @@
   <ItemGroup>
     <ClCompile Include="Evolution.cpp" />
     <ClCompile Include="GenerationDisplay.cpp" />
+    <ClCompile Include="Version.ixx" />
     <ClCompile Include="win32_evoAppMenu.cpp" />
     <ClCompile Include="win32_evoAppWindow.cpp" />
     <ClCompile Include="win32_evoController.cpp" />
