--- a/Evo/History/History.vcxproj
+++ b/Evo/History/History.vcxproj
@@ -171,8 +171,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HistModelData.h" />
-    <ClInclude Include="HistorySystemImpl.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +179,7 @@
     <ClCompile Include="GenerationCmd.ixx" />
     <ClCompile Include="HistCacheItem.ixx" />
     <ClCompile Include="HistGeneration.ixx" />
+    <ClCompile Include="HistModelData.ixx" />
     <ClCompile Include="HistoryCache.cpp" />
     <ClCompile Include="HistoryCache.ixx" />
     <ClCompile Include="HistGeneration.cpp" />
