--- a/Evo/HistoryTest/HistoryTest.vcxproj.filters
+++ b/Evo/HistoryTest/HistoryTest.vcxproj.filters
@@ -21,12 +21,12 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Version.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HistoryTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Version.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
