--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -225,5 +225,8 @@
     <ClCompile Include="DialogItem.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="TimerQueueTimer.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
