--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Win32_BaseWindow.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_HiResTimer.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="Win32_Script.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -226,6 +223,12 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="TimerQueueTimer.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandTimer.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Win32_PerfCounter.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
