--- a/Evo/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/Evo/EvoHistGlue/EvoHistGlue.vcxproj
@@ -162,6 +162,9 @@
     <ClCompile Include="EvoModelDataGlue.ixx" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EvolutionCore\EvolutionCore.vcxproj">
+      <Project>{561ad550-b857-4d93-aa39-5ca48e48e02f}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\History\History.vcxproj">
       <Project>{642c34fc-f20c-45a6-bab8-c75988c88f52}</Project>
     </ProjectReference>
