--- a/Evo/EvolutionCore/EvolutionCore.vcxproj
+++ b/Evo/EvolutionCore/EvolutionCore.vcxproj
@@ -184,10 +184,6 @@
     <ClInclude Include="EvoPixelCoords.h" />
     <ClInclude Include="EvoStatistics.h" />
     <ClInclude Include="geneTypeLimits.h" />
-    <ClInclude Include="gplIterator.h" />
-    <ClInclude Include="gridBrush.h" />
-    <ClInclude Include="GridDimensions.h" />
-    <ClInclude Include="gridNeighbor.h" />
     <ClInclude Include="gridPoint.h" />
     <ClInclude Include="gridPoint24.h" />
     <ClInclude Include="gridRect.h" />
@@ -217,11 +213,15 @@
     <ClCompile Include="GeneType.ixx" />
     <ClCompile Include="GeneTypeLimits.ixx" />
     <ClCompile Include="Genome.ixx" />
-    <ClCompile Include="gridBrush.cpp" />
+    <ClCompile Include="GplIterator.ixx" />
+    <ClCompile Include="GridBrush.cpp" />
+    <ClCompile Include="GridBrush.ixx" />
     <ClCompile Include="GridCoord.ixx" />
     <ClCompile Include="GridDimensions.cpp" />
+    <ClCompile Include="GridDimensions.ixx" />
     <ClCompile Include="GridField.ixx" />
     <ClCompile Include="GridModel.ixx" />
+    <ClCompile Include="GridNeighbor.ixx" />
     <ClCompile Include="GridPOI.cpp" />
     <ClCompile Include="GridPOI.ixx" />
     <ClCompile Include="GridPoint.ixx" />
@@ -233,9 +233,9 @@
     <ClCompile Include="MortalityTable.cpp" />
     <ClCompile Include="Genome.cpp" />
     <ClCompile Include="GridPointList.cpp" />
-    <ClCompile Include="gridNeighbor.cpp" />
+    <ClCompile Include="GridNeighbor.cpp" />
     <ClCompile Include="gridRect.cpp" />
-    <ClCompile Include="grid_model.cpp" />
+    <ClCompile Include="GridModel.cpp" />
     <ClCompile Include="Individual.cpp" />
     <ClCompile Include="Interaction.cpp" />
     <ClCompile Include="Strategy.cpp" />
