--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -36,9 +36,6 @@
     <ClCompile Include="Win32_RootWindow.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_Stopwatch.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="Win32_Thread.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -99,9 +96,6 @@
     <ClCompile Include="Win32_Tooltip.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Win32_ActionTimer.ixx">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="Win32_WinManager.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -118,9 +112,6 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_BaseRefreshRate.ixx">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Win32_Stopwatch.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_MessagePump.ixx">
@@ -229,6 +220,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_PerfCounter.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="HiResClockGen.ixx">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
