bug writing greek mu to wcout fixed, optimizations

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,12 +1,12 @@
-MoveWindow IDM_APPL_WINDOW -1889 1116 1619 980
-MoveWindow IDM_MAIN_WINDOW -1881 1168 1604 899
-MoveWindow IDM_MINI_WINDOW -448 1188 472 472
-MoveWindow IDM_MONITOR_WINDOW -1856 1472 473 451
+MoveWindow IDM_APPL_WINDOW -1889 1116 1647 1008
+MoveWindow IDM_MAIN_WINDOW -1881 1168 1632 927
+MoveWindow IDM_MINI_WINDOW -448 1188 500 500
+MoveWindow IDM_MONITOR_WINDOW -1856 1472 501 479
 MoveWindow IDM_CRSR_WINDOW -330 1890 302 227
 MoveWindow IDM_PARAM_WINDOW -313 1766 282 598
 MoveWindow IDM_PERF_WINDOW -633 1503 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 472 472
-MoveWindow IDM_SIG_DESIGNER -654 1129 672 780
+MoveWindow IDM_DESC_WINDOW -1828 1367 500 500
+MoveWindow IDM_SIG_DESIGNER -663 1221 700 808
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -15,4 +15,4 @@ ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
-ShowWindow IDM_SIG_DESIGNER SW_HIDE
+ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
