--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1889 1116 1648 1009
-MoveWindow IDM_MAIN_WINDOW -1881 1168 1633 928
-MoveWindow IDM_MINI_WINDOW -448 1188 501 501
-MoveWindow IDM_MONITOR_WINDOW -1856 1472 502 480
+MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
+MoveWindow IDM_MAIN_WINDOW -1920 1124 1922 968
+MoveWindow IDM_MINI_WINDOW -448 1188 530 530
+MoveWindow IDM_MONITOR_WINDOW -1856 1472 531 509
 MoveWindow IDM_CRSR_WINDOW -330 1890 302 227
 MoveWindow IDM_PARAM_WINDOW -313 1766 282 598
 MoveWindow IDM_PERF_WINDOW -633 1503 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 501 501
-MoveWindow IDM_SIG_DESIGNER -663 1221 701 809
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_DESC_WINDOW -1828 1367 530 530
+MoveWindow IDM_SIG_DESIGNER -663 1221 730 838
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MONITOR_WINDOW SW_HIDE
