--- a/NNet/NNetModel/NNetModel.vcxproj.filters
+++ b/NNet/NNetModel/NNetModel.vcxproj.filters
@@ -239,5 +239,8 @@
     <ClCompile Include="ScanDataPoint.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UPMicroSensorList.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
