--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,16 +1,16 @@
 MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1922 968
-MoveWindow IDM_MINI_WINDOW -448 1188 564 564
-MoveWindow IDM_MONITOR_WINDOW -1806 1486 565 543
+MoveWindow IDM_MINI_WINDOW -448 1188 567 567
+MoveWindow IDM_MONITOR_WINDOW -1806 1486 568 546
 MoveWindow IDM_CRSR_WINDOW -330 1890 302 227
 MoveWindow IDM_PARAM_WINDOW -313 1766 282 598
 MoveWindow IDM_PERF_WINDOW -633 1503 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 564 564
-MoveWindow IDM_SIG_DESIGNER -755 1208 764 872
+MoveWindow IDM_DESC_WINDOW -1828 1367 567 567
+MoveWindow IDM_SIG_DESIGNER -755 1208 767 875
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
