--- a/NNet/NNetScan/NNetScan.vcxproj
+++ b/NNet/NNetScan/NNetScan.vcxproj
@@ -36,6 +36,9 @@
     <ProjectReference Include="..\..\Toolbox\Utilities\Utilities.vcxproj">
       <Project>{d6e82f0a-c93f-4fa0-aacf-910ef2f59fdc}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\ModelIO\ModelIO.vcxproj">
+      <Project>{e33a1409-350a-457f-ba47-e84659426576}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\NNetModel\NNetModel.vcxproj">
       <Project>{93dedccb-8be5-48af-8e14-da2a19870565}</Project>
     </ProjectReference>
