--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,16 +1,16 @@
 MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
 MoveWindow IDM_MAIN_WINDOW -1920 1124 1922 968
-MoveWindow IDM_MINI_WINDOW -448 1188 596 596
-MoveWindow IDM_MONITOR_WINDOW -1806 1486 597 575
+MoveWindow IDM_MINI_WINDOW -448 1188 597 597
+MoveWindow IDM_MONITOR_WINDOW -1882 1462 528 457
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -787 1153 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 596 596
-MoveWindow IDM_SIG_DESIGNER -755 1208 796 904
+MoveWindow IDM_DESC_WINDOW -1828 1367 597 597
+MoveWindow IDM_SIG_DESIGNER -755 1208 797 905
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
