--- a/Toolbox/Utilities/Utilities.vcxproj.filters
+++ b/Toolbox/Utilities/Utilities.vcxproj.filters
@@ -102,5 +102,8 @@
     <ClCompile Include="EnumArray.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ColorLUT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
