--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,18 +1,20 @@
-MoveWindow IDM_APPL_WINDOW -1928 1072 1937 1049
-MoveWindow IDM_MAIN_WINDOW -1920 1124 1922 968
-MoveWindow IDM_MINI_WINDOW -695 1203 620 620
-MoveWindow IDM_MONITOR_WINDOW -1882 1462 551 480
+MoveWindow IDM_APPL_WINDOW -1819 1084 1753 1055
+MoveWindow IDM_MAIN_WINDOW -1811 1136 1738 974
+MoveWindow IDM_MINI_WINDOW -695 1203 627 627
+MoveWindow IDM_MONITOR_WINDOW -1799 1435 558 256
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -787 1153 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 620 620
-MoveWindow IDM_SIG_DESIGNER -755 1208 820 928
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_DESC_WINDOW -1828 1367 627 627
+MoveWindow IDM_SIG_DESIGNER -898 1272 827 619
+MoveWindow IDM_LUT_DESIGNER -883 1316 302 202
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
