--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1819 1084 1753 1055
-MoveWindow IDM_MAIN_WINDOW -1811 1136 1738 974
-MoveWindow IDM_MINI_WINDOW -695 1203 627 627
-MoveWindow IDM_MONITOR_WINDOW -1799 1435 558 256
+MoveWindow IDM_APPL_WINDOW -1815 1089 1755 1018
+MoveWindow IDM_MAIN_WINDOW -1807 1141 1740 937
+MoveWindow IDM_MINI_WINDOW -695 1203 629 629
+MoveWindow IDM_MONITOR_WINDOW -1799 1435 560 258
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
-MoveWindow IDM_PARAM_WINDOW -787 1153 282 556
+MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 627 627
-MoveWindow IDM_SIG_DESIGNER -898 1272 827 619
-MoveWindow IDM_LUT_DESIGNER -883 1316 302 202
+MoveWindow IDM_DESC_WINDOW -1828 1367 629 629
+MoveWindow IDM_SIG_DESIGNER -898 1272 829 621
+MoveWindow IDM_LUT_DESIGNER 495 576 304 204
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -17,4 +17,4 @@ ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
-ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_LUT_DESIGNER SW_HIDE
