ColLUTDesigner finished, small bugs fixed, SignalDesigner horz scale range larger

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_APPL_WINDOW -1815 1089 1755 1018
-MoveWindow IDM_MAIN_WINDOW -1807 1141 1740 937
-MoveWindow IDM_MINI_WINDOW -695 1203 629 629
-MoveWindow IDM_MONITOR_WINDOW -1799 1435 560 258
+MoveWindow IDM_APPL_WINDOW -1815 1089 1769 1032
+MoveWindow IDM_MAIN_WINDOW -1807 1141 1754 951
+MoveWindow IDM_MINI_WINDOW -695 1203 643 643
+MoveWindow IDM_MONITOR_WINDOW -1799 1435 574 272
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 629 629
-MoveWindow IDM_SIG_DESIGNER -898 1272 829 621
-MoveWindow IDM_LUT_DESIGNER 495 576 304 204
+MoveWindow IDM_DESC_WINDOW -1828 1367 643 643
+MoveWindow IDM_SIG_DESIGNER -898 1272 843 635
+MoveWindow IDM_LUT_DESIGNER -1153 1561 318 218
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_SHOWNORMAL
-ShowWindow IDM_LUT_DESIGNER SW_HIDE
+ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
