--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,17 +1,17 @@
-MoveWindow IDM_APPL_WINDOW -1815 1089 1769 1032
-MoveWindow IDM_MAIN_WINDOW -1807 1141 1754 951
-MoveWindow IDM_MINI_WINDOW -695 1203 643 643
-MoveWindow IDM_MONITOR_WINDOW -1799 1435 574 272
+MoveWindow IDM_APPL_WINDOW -1815 1089 1770 1033
+MoveWindow IDM_MAIN_WINDOW -1807 1141 1755 952
+MoveWindow IDM_MINI_WINDOW -695 1203 644 644
+MoveWindow IDM_MONITOR_WINDOW -1799 1435 575 273
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 643 643
-MoveWindow IDM_SIG_DESIGNER -898 1272 843 635
-MoveWindow IDM_LUT_DESIGNER -1153 1561 318 218
+MoveWindow IDM_DESC_WINDOW -1828 1367 644 644
+MoveWindow IDM_SIG_DESIGNER -898 1272 844 636
+MoveWindow IDM_LUT_DESIGNER -1153 1561 319 219
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-ShowWindow IDM_MONITOR_WINDOW SW_HIDE
+ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
