bug fixed, Nob::SetColorLut

--- a/NNet/NNetSimu/WindowConfiguration1.cnf
+++ b/NNet/NNetSimu/WindowConfiguration1.cnf
@@ -1,13 +1,13 @@
-MoveWindow IDM_APPL_WINDOW -1815 1089 1771 1034
-MoveWindow IDM_MAIN_WINDOW -1807 1141 1756 953
-MoveWindow IDM_MINI_WINDOW -695 1203 645 645
-MoveWindow IDM_MONITOR_WINDOW -1799 1435 576 274
+MoveWindow IDM_APPL_WINDOW -1815 1089 1772 1035
+MoveWindow IDM_MAIN_WINDOW -1807 1141 1757 954
+MoveWindow IDM_MINI_WINDOW -695 1203 646 646
+MoveWindow IDM_MONITOR_WINDOW -1799 1435 577 275
 MoveWindow IDM_CRSR_WINDOW -795 1794 302 227
 MoveWindow IDM_PARAM_WINDOW -318 1510 282 556
 MoveWindow IDM_PERF_WINDOW -326 1451 302 352
-MoveWindow IDM_DESC_WINDOW -1828 1367 645 645
-MoveWindow IDM_SIG_DESIGNER -898 1272 845 637
-MoveWindow IDM_LUT_DESIGNER -1153 1561 320 220
+MoveWindow IDM_DESC_WINDOW -1828 1367 646 646
+MoveWindow IDM_SIG_DESIGNER -898 1272 846 638
+MoveWindow IDM_LUT_DESIGNER -686 1561 321 221
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
@@ -17,4 +17,4 @@ ShowWindow IDM_PARAM_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 ShowWindow IDM_DESC_WINDOW SW_HIDE
 ShowWindow IDM_SIG_DESIGNER SW_HIDE
-ShowWindow IDM_LUT_DESIGNER SW_SHOWNORMAL
+ShowWindow IDM_LUT_DESIGNER SW_HIDE
