--- a/NNet/NNetSignals/NNetSignals.vcxproj.filters
+++ b/NNet/NNetSignals/NNetSignals.vcxproj.filters
@@ -66,5 +66,11 @@
     <ClCompile Include="NNetSignals.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventViewer.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EventViewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
